// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-icOqvn gfcdXO"
  >
    <div
      className="sc-gaqsZu gXEWLA"
    >
      <ul
        className="sc-jPVYhN sc-fXywWY fnMugc eOFqYR"
      >
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            0
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            1
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            2
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            3
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            4
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            5
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            6
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            7
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            8
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            9
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            10
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            11
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            12
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            13
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            14
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            15
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            16
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            17
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            18
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            19
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            20
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            21
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            22
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            23
          </div>
        </li>
        <li
          className="sc-jdHRdX hWZVGv"
        >
          <div
            className="sc-fAjPcg eXeQHQ"
          >
            24
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Carousel renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex justify-around items-center w-full"
  >
    <div
      className="sc-hoyuhS bXzXRK"
    >
      <div
        className="sc-gaqsZu gXEWLA"
      >
        <ul
          className="sc-jPVYhN sc-fXywWY fnMugc eOFqYR"
        >
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              24
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              23
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              22
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              21
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              20
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              19
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              18
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              17
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              16
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              15
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              14
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              13
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              12
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              11
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              10
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              9
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              8
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              7
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              6
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              5
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              4
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              3
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              2
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              1
            </div>
          </li>
          <li
            className="sc-jdHRdX hWZVGv"
          >
            <div
              className="sc-lXfUi bskoND"
            >
              0
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel renders visible index 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-gaqsZu gXEWLA"
  >
    <ul
      className="sc-jPVYhN sc-fXywWY rhfQk eOFqYR"
    >
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-chbKxp eMnDfR"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-chbKxp eMnDfR"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-chbKxp eMnDfR"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-chbKxp eMnDfR"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-chbKxp eMnDfR"
        >
          -1
          , 
          -1
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Carousel renders with Customized Arrows 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-gaqsZu gXEWLA"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to left
    </button>
    <ul
      className="sc-jPVYhN sc-fXywWY fnMugc eOFqYR"
    >
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          0
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          1
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          2
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          3
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          4
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          5
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          6
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          7
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          8
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          9
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          10
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          11
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          12
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          13
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          14
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          15
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          16
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          17
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          18
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          19
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          20
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          21
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          22
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          23
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          24
        </div>
      </li>
    </ul>
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to Right
    </button>
  </div>
</div>
`;

exports[`Carousel renders with different Space 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-gaqsZu gXEWLA"
  >
    <ul
      className="sc-jPVYhN sc-fXywWY rhfQk eOFqYR"
    >
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          0
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          1
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          2
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          3
        </div>
      </li>
      <li
        className="sc-jdHRdX hWZVGv"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          4
        </div>
      </li>
    </ul>
  </div>
</div>
`;
